# runhq

./: .gitattributes  .gitignore  .prettierignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  apps.json  commitlint.config.cjs  eslint.config.js  package.json  pnpm-lock.yaml
.github/: CODEOWNERS  dependabot.yml  labeler.yml  pull_request_template.md  release-please-config.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  dependabot-auto-merge.yml  homebrew-tap.yml  labeler.yml  pr-size-labeler.yml  pr-title-check.yml  release-please.yml  release.yml  stale.yml
.husky/: pre-commit
apps/desktop/: index.html  package.json  quick-action.html  tailwind.config.ts  tray-hint.html  tsconfig.json  tsconfig.node.json  vite.config.ts
apps/desktop/src/: App.tsx  main.tsx  quick-action-main.tsx  styles.css  tray-hint-main.tsx
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: ipc.rs  lib.rs  main.rs  terminal.rs
apps/desktop/src/components/: EditorDropdown.tsx  LogPanel.tsx  MoveToSectionMenu.tsx  PortManager.tsx  QuickActionBar.tsx  ResizeHandles.tsx  ScanDialog.tsx  SectionMenus.tsx  ServiceEditor.tsx  ShortcutSettings.tsx  SidebarFilterMenu.tsx  SidebarRail.tsx  StackDetail.tsx  StackEditor.tsx  StatusBar.tsx  TerminalPane.tsx  ThemeMenu.tsx  TitleBar.tsx  TrayHintBanner.tsx  UpdateBanner.tsx  WelcomeTour.tsx
apps/desktop/src/components/sidebar/: dnd.ts  (+8 more)
apps/desktop/src/lib/: categories.ts  context-menu.tsx  hooks.ts  ipc.ts  onboarding.ts  platform.ts  runtimes.ts  sectionColors.ts  theme.ts  url.ts
apps/desktop/src/store/: useAppStore.ts
apps/desktop/src/types/: index.ts
crates/runhq-core/: Cargo.toml
crates/runhq-core/src/: editors.rs  error.rs  events.rs  lib.rs  logs.rs  paths.rs  ports.rs  process.rs  scanner.rs  state.rs
crates/runhq-core/tests/: logs.rs  scanner.rs
docs/: RELEASING.md  _headers  _redirects  index.html  robots.txt  sitemap.xml  style.css
docs/functions/api/updates/: latest.js
scripts/: generate-source-icon.py  generate-winget-manifest.sh  homebrew-cask-template.rb
(+29 files in other folders)
