[package]
name = "runhq-core"
version = "0.4.0" # x-release-please-version
edition = "2021"
rust-version = "1.77"
license = "MIT"
repository = "https://github.com/erdembas/runhq"
description = "Core domain logic for RunHQ: process supervision, port inspection, project scanning, persisted state."

[lib]
name = "runhq_core"

[dependencies]
tokio = { version = "1.41", features = ["full"] }
tokio-util = { version = "0.7", features = ["io"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"

anyhow = "1"
thiserror = "2"

uuid = { version = "1.11", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde", "clock"] }

dirs = "5"
sysinfo = "0.32"
listeners = "0.5"

tracing = "0.1"
parking_lot = "0.12"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.29", features = ["signal"] }

[dev-dependencies]
tempfile = "3"
tokio = { version = "1.41", features = ["macros", "rt-multi-thread"] }
