[package]
name = "runhq-desktop"
version = "0.4.0" # x-release-please-version
description = "RunHQ desktop application."
edition = "2021"
rust-version = "1.77"
license = "MIT"
repository = "https://github.com/erdembas/runhq"

[lib]
name = "runhq_desktop"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "runhq"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
runhq-core = { path = "../../../crates/runhq-core" }

tauri = { version = "2", features = ["tray-icon", "macos-private-api"] }
tauri-plugin-dialog = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-opener = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"

tokio = { version = "1.41", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

uuid = { version = "1.11", features = ["v4"] }
portable-pty = "0.8"
anyhow = "1"
parking_lot = "0.12"
open = "5"

[features]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
